<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeTxt"
                android:id="@+id/txtPause"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:layout_above="@+id/textView2" android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false" android:layout_marginLeft="10dp"
                android:layout_marginBottom="0dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PlayRuleTxt"
                android:id="@+id/textView2"
                android:textStyle="normal" android:textSize="18sp"
                android:layout_centerVertical="true" android:layout_alignParentStart="true"
                android:layout_marginBottom="-5dp" android:layout_marginTop="10dp"
                android:paddingLeft="0dp" android:textColor="@color/White" android:layout_marginLeft="10dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtName1"
                android:layout_marginTop="25dp" android:textColor="@color/White"
                android:textStyle="bold" android:hint="@string/name1Edt"
                android:textColorHint="@color/Red" android:paddingTop="10dp" android:textSize="20sp"
                android:background="@color/Grey" android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtName2"
                android:textColor="@color/White" android:textStyle="bold"
                android:hint="@string/name2Edt"
                android:textColorHint="@color/Red" android:paddingTop="10dp" android:textSize="20sp"
                android:background="@color/Grey" android:layout_below="@+id/edtName1"
                android:layout_alignStart="@+id/edtName1" android:layout_marginTop="20dp" android:singleLine="true"
                android:layout_alignParentLeft="true" android:layout_marginLeft="10dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/imageView" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:src="@drawable/andy"
                android:layout_alignParentEnd="true" android:layout_above="@+id/txtPause"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/background_menu" android:layout_marginRight="0dp"
                android:scaleType="center"/>
        <Button
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:text="@string/PlayBtn"
                android:id="@+id/btnPlay"
                android:singleLine="false"
                android:textColor="@color/LightYellow" android:textStyle="bold"
                android:clickable="true"
                android:background="#a40a0a0a"
                android:layout_alignTop="@+id/edtName1" android:layout_alignEnd="@+id/textView2"
                />
    </RelativeLayout>
</LinearLayout>