<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/LinearLayout" android:background="@drawable/back">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ticTacHead"
            android:id="@+id/textView4" android:layout_gravity="center_horizontal" android:textSize="50sp"
            android:textStyle="bold" android:paddingTop="20dp" android:layout_marginTop="20dp"
            android:textColor="@color/White"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/relativeLayout">
        <TextView
                android:id="@+id/gameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gameOver" android:layout_gravity="center_horizontal" android:textStyle="bold"
                android:textColor="@color/Red" android:textSize="40sp"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/highesScore"
                android:id="@+id/btnHighScore"
                android:textStyle="bold"
                android:textColor="@color/LightYellow"
                android:clickable="true"
                android:singleLine="true" android:textSize="25sp"
                android:layout_below="@+id/btnNewGame" android:layout_alignEnd="@+id/txtPlayer"
                android:layout_marginTop="15dp"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/newButton"
                android:id="@+id/btnNewGame"
                android:clickable="true" android:textColorHint="@color/White"
                android:textSize="25sp"
                android:layout_marginTop="70dp" android:layout_below="@+id/txtClock"
                android:layout_alignEnd="@+id/txtPlayer"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/quitButton"
                android:id="@+id/btnQuit"
                android:textColor="@color/Red" android:clickable="true"
                android:textSize="25sp"
                android:layout_below="@+id/btnHighScore" android:layout_alignEnd="@+id/gameOver"
                android:layout_marginTop="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtOut"
                android:textSize="18sp"
                android:textColor="@color/LightYellow" android:hint="@string/txtOutDisp"
                android:singleLine="true" android:textColorHint="@color/Red"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_toEndOf="@+id/linearLayout" android:layout_marginTop="80dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txtClock"
                  android:textSize="15sp"
                  android:hint="@string/displaytime"
                  android:textColor="@color/Yellow" android:textColorHint="@color/Red"
                  android:singleLine="false"
                  android:layout_below="@+id/gameOver" android:layout_alignStart="@+id/btnNewGame"
                  android:layout_marginStart="40dp" android:inputType="date"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txtPlayer"
                  android:textSize="25sp"
                  android:textColor="@color/LightYellow"
                  android:textColorHint="@color/Red" android:singleLine="true"
                  android:textStyle="bold"
                  android:inputType="text"
                  android:gravity="left"
                  android:layout_alignEnd="@+id/btnQuit" android:layout_marginTop="80dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/linearLayout">
        </LinearLayout>
        <AnalogClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/analogClock"
                android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
                android:layout_below="@+id/btnQuit"/>
    </RelativeLayout>
</LinearLayout>