<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="1">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgView"
                android:src="@drawable/back"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:contentDescription="@string/background_menu"/>
        <TextView
                android:id="@+id/txtPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause" android:layout_below="@+id/txtWelcome"
                android:layout_centerHorizontal="true" android:textStyle="bold" android:textColor="#fff2ff4b"
                android:paddingTop="30dp" android:textSize="30dp" android:layout_marginTop="0dp"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/newGame"
                android:id="@+id/btnNewGame"
                android:layout_below="@+id/btnResume" android:layout_alignStart="@+id/btnResume"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/velkommen"
                android:id="@+id/txtWelcome" android:textColor="#fff0ecff" android:layout_gravity="center_horizontal"
                android:paddingTop="0dp" android:textSize="30sp"
                style="@android:style/DeviceDefault.Light.ButtonBar.AlertDialog"
                android:layout_marginLeft="0dp" android:textStyle="bold|italic"
                android:layout_marginTop="91dp"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:id="@+id/btnQuit"
                android:textColor="#ffff2618"
                android:layout_below="@+id/btnNewGame" android:layout_alignStart="@+id/btnNewGame"
                android:layout_marginTop="52dp"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Resume"
                android:id="@+id/btnResume"
                android:textStyle="bold" android:textColor="#fffff434"
                android:layout_below="@+id/txtPause" android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="High Score"
                android:id="@+id/btnHighScore"
                android:layout_below="@+id/btnNewGame" android:layout_alignStart="@+id/btnNewGame"
                android:textColor="#ffffbc20"/>
    </RelativeLayout>
</LinearLayout>

