<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:weightSum="1" android:background="@drawable/back_4" android:orientation="vertical"
              android:id="@+id/linearLayout">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/re" android:layout_weight="1">
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/HighScore"
                android:id="@+id/btnHighScore"
                android:textColor="#ffdaff36"
                android:textStyle="bold|italic" android:textSize="30sp"
                android:layout_centerVertical="true" android:layout_alignStart="@+id/btnQuit"
                android:layout_marginTop="15dp"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/newGame"
                android:id="@+id/btnNewGame"
                android:textStyle="bold|italic" android:layout_above="@+id/btnHighScore"
                android:layout_centerHorizontal="true" android:textColor="#ffffffff" android:textSize="30sp"
                android:layout_marginTop="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/velkommen"
                android:id="@+id/txtWelcome" android:textColor="#ffffffff" android:layout_gravity="center_horizontal"
                android:paddingTop="0dp" android:textSize="36sp"
                style="@android:style/DeviceDefault.Light.ButtonBar.AlertDialog"
                android:textStyle="bold|italic"
                android:layout_marginTop="80dp"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:id="@+id/btnQuit"
                android:textColor="#ffff2618"
                android:textStyle="bold|italic"
                android:textSize="30sp" android:singleLine="false"
                android:layout_below="@+id/btnHighScore" android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
    </RelativeLayout>
</LinearLayout>

