<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/LinearLayout" android:background="@drawable/back">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ticTacHead"
            android:id="@+id/textView4" android:textSize="50sp"
            android:textStyle="bold" android:paddingTop="20dp" android:layout_marginLeft="20dp"
            android:textColor="@color/White"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScore"
            android:id="@+id/textView3" android:textColor="@color/LightYellow"
            android:paddingTop="40dp" android:textStyle="bold"
            android:textSize="40sp" android:layout_marginLeft="10dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuKnapp"
            android:id="@+id/btnMenu"
            android:textSize="20sp"
            android:textColor="@color/LightYellow"
            android:layout_marginEnd="0dp" android:layout_gravity="right" android:layout_marginTop="-50dp"
            android:layout_marginRight="20dp"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/relativeLayout">
        <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:entries="@array/games_played_Array"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" android:layout_marginTop="15dp"/>
    </RelativeLayout>
</LinearLayout>